# prpr

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
cli/: index.html
concepts/architecture/: index.html
cookbook/: index.html
daemon/: index.html
docs/: cli.md  cookbook.md  daemon.md  getting-started.md  index.md  library.md  mcp.md  parity.md  spec.md
docs/concepts/: architecture.md
getting-started/: index.html
mcp/: index.html
packaging/homebrew/: README.md  pmr.rb  prpr.rb
parity/: index.html
plugin/: .uxprc  index.html  main.js  manifest.json
plugin-headless/: .uxprc
plugin-panel/: index.html  main.js  manifest.json
pmr/: __init__.py  __main__.py  _js.py  bridge.py  connection.py  daemon.py  diff.py  doctor.py  effects.py  errors.py  events.py  interchange.py  lint.py  media.py  premiere.py  project.py  render.py  schema.py  snapshot.py  spec.py  timeline.py
pmr/cli/: __init__.py  main.py  output.py  session.py
pmr/cli/commands/: apply.py  clip.py  completion.py  diff.py  effects.py  lint.py  mcp.py  media.py  metadata.py  monitor.py  plugin.py  project.py  render.py  schema.py  script.py  serve.py  snapshot.py  spec.py  timeline.py
pmr/mcp/: __init__.py  server.py
prpr/: __init__.py  __main__.py  _js.py  bridge.py  connection.py  daemon.py  diff.py  doctor.py  effects.py  errors.py  events.py  lint.py  media.py  premiere.py  project.py  render.py  schema.py  snapshot.py  spec.py  timeline.py
prpr/cli/: __init__.py  main.py  output.py  session.py
prpr/cli/commands/: __init__.py  apply.py  clip.py  completion.py  diff.py  effects.py  lint.py  mcp.py  media.py  metadata.py  monitor.py  plugin.py  project.py  render.py  schema.py  script.py  serve.py  snapshot.py  spec.py  timeline.py
prpr/mcp/: __init__.py  server.py
scripts/: check_parity.py  smoke_live.py
search/: search_index.json
spec/: index.html
tests/: conftest.py  test_cli_commands.py  test_daemon.py  test_errors.py  test_events.py  test_library_surface.py  test_mcp_handlers.py  test_mcp_server.py  test_media_and_render.py  test_plugin_freshness.py  test_plugin_version_sync.py  test_spec_diff_lint.py  test_timeline_with_mock.py
