[build-system]
requires = ["hatchling>=1.21", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "pmr"
dynamic = ["version"]
description = "Adobe Premiere Pro CLI, Python library, and MCP server. Automate editing, sequencing, and export with LLM-friendly tools for AI agents. Declarative, scriptable, structured JSON output."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "M Hadi", email = "mhadifilms@gmail.com" }]
keywords = [
    "premiere-pro",
    "adobe",
    "uxp",
    "video-editing",
    "post-production",
    "vfx",
    "cli",
    "command-line",
    "automation",
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "llm",
    "llm-tools",
    "ai-agents",
    "rendering",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13.7",
    "typer>=0.12",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/mhadifilms/pmr"
Documentation = "https://mhadifilms.github.io/pmr"
Repository = "https://github.com/mhadifilms/pmr"
Issues = "https://github.com/mhadifilms/pmr/issues"
Changelog = "https://github.com/mhadifilms/pmr/blob/main/CHANGELOG.md"

[project.scripts]
pmr = "pmr.cli.main:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pmr/_version.py"

[tool.hatch.build.targets.sdist]
include = ["pmr", "plugin", "tests", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.hatch.build.targets.wheel]
packages = ["pmr"]

[tool.hatch.build.targets.wheel.force-include]
plugin = "pmr/plugin_assets"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["pmr/_version.py"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "SIM",           # flake8-simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",          # line too long (formatter handles)
    "B008",          # function calls in defaults (typer pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["mcp", "mcp.*", "websockets", "websockets.*"]
ignore_missing_imports = true

# The bridge handles are inherently `Any`; wrapper modules necessarily
# return values forwarded from those handles. Don't warn on `Any` returns
# in those modules — the boundary is the whole point.
[[tool.mypy.overrides]]
module = [
    "pmr.bridge",
    "pmr.connection",
    "pmr.daemon",
    "pmr.effects",
    "pmr.events",
    "pmr.interchange",
    "pmr.media",
    "pmr.premiere",
    "pmr.project",
    "pmr.render",
    "pmr.timeline",
]
warn_return_any = false

# MCP server uses untyped third-party decorators; allow them.
[[tool.mypy.overrides]]
module = ["pmr.mcp.*"]
disallow_untyped_decorators = false
disallow_untyped_calls = false
warn_return_any = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: requires a running Adobe Premiere Pro instance with the pmr bridge plugin",
    "macos: macOS-only behavior",
]
